crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_pseudo_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
assertion_line: 120
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(15))"
---
//! FIXTURE: Simple Rust functions
//! TESTS: Basic function signature extraction

pub fn add(a: i32, b: i32) -> i32 {
    a + b
}

pub fn greet(name: &str) -> String {
    format!("Hello, {}!", name)
}

pub struct Calculator {
    value: i32,
}

// ... (19 lines truncated)
