crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
assertion_line: 156
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
//! FIXTURE: Simple Rust functions
//! TESTS: Basic function signature extraction

pub fn add(a: i32, b: i32) -> i32 {
    a + b
// ... (29 lines truncated)
