crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_signatures_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Signatures))"
---
pub fn add(a: i32, b: i32) -> i32
pub fn greet(name: &str) -> String
pub fn new(value: i32) -> Self
pub fn add(&self, x: i32) -> i32
