crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_structure_last10.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Structure).with_last_lines(10))"
---
// ... (25 lines above)
pub trait Compute {
    fn compute(&self, x: i32) -> i32;
}

pub enum Status {
    Active,
    Inactive,
    Pending,
}
