crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
// ... (11 lines truncated)
pub struct Calculator {
    value: i32,
}
// ... (11 lines truncated)
pub trait Compute {
    fn compute(&self, x: i32) -> i32;
}
// ... (1 line truncated)
pub enum Status {
    Active,
    Inactive,
    Pending,
}
