crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_structure_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_SIMPLE, Language::Rust,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(5))"
---
// ... (11 lines truncated)
pub struct Calculator {
    value: i32,
}
// ... (20 lines truncated)
