crates/rskim-core/tests/snapshots/truncation_golden__rust_simple_structure_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_SIMPLE, Language::Rust, TransformConfig::with_mode(Mode::Structure))"
---
//! FIXTURE: Simple Rust functions
//! TESTS: Basic function signature extraction

pub fn add(a: i32, b: i32) -> i32  {...}

pub fn greet(name: &str) -> String  {...}

pub struct Calculator {
    value: i32,
}

impl Calculator {
    pub fn new(value: i32) -> Self  {...}

    pub fn add(&self, x: i32) -> i32  {...}
}

pub trait Compute {
    fn compute(&self, x: i32) -> i32;
}

pub enum Status {
    Active,
    Inactive,
    Pending,
}
